Notes of the key displaying without brackets

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
 
                 </div>
                 <div class="header">
-                    <p id="keyIs">NEW  </p>
-                    {{ sk.notes }}
+                    <p id="keyIs">The notes are  </p>
+                    {{ notes }}
 
                 </div>
             </div>
