Notes string and note lists returning on sep funcs

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,9 @@
                 </div>
                 <div class="header">
                     <p id="keyIs">The notes are  </p>
-                    {{ notes }}
-
+                    {% if notes %}
+                    {{ notes|join(', ') }}
+                    {% endif %}
                 </div>
             </div>
         </div>  
