--- a/templates/index.html
+++ b/templates/index.html
@@ -1,65 +1,81 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
     <title>Vocal harmony</title>
 </head>
+
 <body>
     <div class="body">
         <div class="row keyDD">
             <div class="col-3 header">
                 <div class="btn-group keyButton">
                     <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Pick your key
-                    </button>
+                            Pick your key
+                        </button>
                     <ul class="dropdown-menu">
                         <form method="POST">
-                        {% for keys in ks %}
-                        
-                        <li><button type="submit" value="{{ keys.keySig }}" name="keySig" class="dropdown-item text-center">{{ keys.keySig }}</button></li>
-                        
-                        {% endfor %}
+                            {% for keys in ks %}
+
+                            <li><button type="submit" value="{{ keys.keySig }}" name="keySig" class="dropdown-item text-center">{{ keys.keySig }}</button></li>
+
+                            {% endfor %}
                         </form>
                     </ul>
                 </div>
-                
 
 
-                
+
+
             </div>
             <div class="col-9 header">
                 <div class="header">
-                    <p id="keyIs">Your key is  </p> 
+                    <p id="keyIs">Your key is </p>
                     {{ sk.keySig }}
 
                 </div>
                 <div class="header">
-                    <p id="keyIs">The notes are  </p>
-                    {% if notes %}
-                    {{ notes|join(', ') }}
-                    {% endif %}
+                    <p id="keyIs">The notes are </p>
+                    {% if notes %} {{ notes|join(', ') }} {% endif %}
                 </div>
             </div>
-        </div>  
+        </div>
+        <div class="row notesHeader">
+            <div class="col notesSection">
+                {% if notes %} {% for notes in notes %}
 
-        
+                <div class="form-check form-check-inline noteselect">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="{{ notes }}">
+                    <label class="form-check-label" for="inlineCheckbox1">{{ notes }}</label>
+                </div>
+
+                {% endfor %} {% endif %}
+            </div>
+
+        </div>
+
+
+
 
     </div>
-    
+
 
 </body>
 
 <script src="{{ url_for('static', filename='js/script.js')}}"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+</script>
 
 </html>
-
-
