--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,16 @@
 <div class="row keyDD">
     <div class="col-3 header">
         <div class="btn-group keyButton">
-            <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Pick your key
             </button>
             <ul class="dropdown-menu">
                 <form method="POST">
                     {% for keys in ks %}
 
-                    <li><button type="submit" value="{{ keys.keySig }}" name="keySig" class="dropdown-item text-center">{{ keys.keySig }}</button></li>
+                    <li><button type="submit" value="{{ keys.keySig }}" name="keySig"
+                            class="dropdown-item text-center">{{ keys.keySig }}</button></li>
 
                     {% endfor %}
                 </form>
