Javascript function displaying select button

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="col-1">
-                        <button type="submit" id="rootSelect" class="play_root btn btn-primary btn-lg">Submit</button>
+                        <button type="submit" id="root_Select" class="play_root btn btn-primary btn-lg">Submit</button>
                     </div>
                 </div>
             </form>
