--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,14 @@
     display: none;
 }
 
+.new {
+    padding-bottom: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+    min-height: 100px;
+    font-size: 10px;
+}
+
 
 /* #notesblock {
     display: none;
