--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
         <div class="body">
             <div class="row keyDD">
                 <div class="col-3 header">
+                    
                     <div class="btn-group keyButton">
                         <button class="btn btn-secondary btn-lg dropdown-toggle" type="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -28,9 +29,9 @@
                         <ul class="dropdown-menu">
                             <form method="GET">
                                 {% for keys in ks %}
+                                
 
-                                <li><a class="dropdown-item text-center" name="showdivs"
-                                        onclick="handleClick(event)"
+                                <li><a class="dropdown-item text-center" value="{{ keys.keySig }}" name="keySig"
                                         href="{{url_for('harmony', key=keys.keySig)}}"
                                         class="brand-logo">{{ keys.keySig }}</a></li>
 
@@ -51,9 +52,10 @@
                 </div>
             </div>
 
+
             <div class="notesHeader" id="rootblock">
 
-                <form method="post" action="{{url_for('harmony', key=key)}}">
+                <form method="get" action="{{url_for('harmony', key=key)}}">
                     <div class="row">
                         <h1 class="text-center">Pick your root note</h1>
 
@@ -80,6 +82,7 @@
 
             </div>
 
+            <!---->
             <div class="notesHeader" id="notesblock">
                 <form method="POST" action="{{url_for('get_harm_notes', key=key)}}">
                     <div class="row">
@@ -87,16 +90,14 @@
                         <div class="col-11 notesSection">
 
                             {% for notes in Keynotes %}
-
                             <div class="form-check form-check-inline noteselect">
 
-                                <input class="form-check-input" name="harmSelect{{notes}}" type="checkbox"
-                                    id="inlineCheckbox" value="{{ notes }}">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ notes }}"
+                                    value="{{ notes }}" name="harmSelect{{notes}}">
                                 <label class="form-check-label" for="inlineCheckbox">{{ notes }}</label>
                             </div>
                             {% endfor %}
                         </div>
-
                         <div class="col-1">
                             <button type="submit" id="harmSelect"
                                 class="play_root btn btn-primary btn-lg">Submit</button>
@@ -105,21 +106,27 @@
                 </form>
             </div>
 
+            <!---->
         </div>
-    </body>
-    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous">
-    </script>
+
+        
+
+        </div>
+        </body> 
+        <script src="{{ url_for('static', filename='js/script.js')}}">
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+                integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+                crossorigin="anonymous">
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+                integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+                crossorigin="anonymous">
+            </script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous">
+            </script>
 
 
 
