For audio preview

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
             <div class="notesHeader" id="rootblock">
 
-                <form method="get" action="{{url_for('harmony', key=key)}}">
+                <form method="post" action="{{url_for('harmony', key=key)}}">
                     <div class="row">
                         <h1 class="text-center">Pick your root note</h1>
 
