--- a/templates/select_root.html
+++ b/templates/select_root.html
@@ -6,7 +6,7 @@
 <div class="notesHeader" id="rootblock">
     
 
-    <form method="get">
+    <form method="POST" action="{{url_for('root', key=key)}}">
         <div class="row">
             <h1 class="text-center">Pick your root note - Select_root.html</h1>
             
@@ -25,7 +25,7 @@
             
 
             <div class="col-1">
-                <button action="{{url_for('root', key=key, note=note)}}" type="submit" id="root_Select"
+                <button type="submit" id="root_Select"
                     class="play_root btn btn-primary btn-lg">Submit</button>
             </div>
         </div>
