--- a/templates/select_root.html
+++ b/templates/select_root.html
@@ -7,8 +7,10 @@
     
 
     <form method="POST" action="{{url_for('root', key=key)}}">
+
+
         <div class="row">
-            <h1 class="text-center">Pick your root note - Select_root.html</h1>
+            <h1 class="text-center">Pick your root note</h1>
             
             <div class="col-11 notesSection">
                 {% for each in Keynotes %}
