--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
                                     Your key is {{ key }}
                                 </td>
 
-                                <td class="right" id="keyIs">{% if note %}
-                                    Your root note is {{ note }}
+                                <td class="right" id="keyIs">{% if root %}
+                                    Your root note is {{ root }}
                                 </td>{% endif %}
                             </tr>
                         </table>
