--- a/templates/root.html
+++ b/templates/root.html
@@ -3,45 +3,33 @@
 
 <div class="notesHeader" id="rootblock">
 
-    <form method="post"  action="{{url_for('root', key=key, root=root)}}">
+    <form method="post"  action="{{url_for('harmonykeys', key=key)}}">
         <div class="row">
             <h1 class="text-center">Pick your root note </h1>
 
             <div class="col-11 notesSection">
                 {% for each in Keynotes %}
             
-                {% if root == each %}
                 <div class="form-check form-check-inline noteselect">
 
-                    <input name="rootSelect" checked="true" class="form-check-input"  type="radio"
-                        id="inlineRootCheckbox" value="{{ root }}" >
-                    <label class="form-check-label" for="inlineRootCheckbox">{{ root }}</label>
-                </div>
-                
-                {% elif root != each  %}
-              
-                <div class="form-check form-check-inline noteselect">
-
-                    <input name="rootSelect" checked="false" class="form-check-input"  type="radio"
+                    <input name="rootSelect" {%if each == root %} checked {%endif%} class="form-check-input"  type="radio"
                         id="inlineRootCheckbox" value="{{ each }}" >
                     <label class="form-check-label" for="inlineRootCheckbox">{{ each }}</label>
                 </div>
-                    {% endif %}
                    
                     {% endfor %}
             </div>
 
-            <div class="col-1">
-                <button type="submit" id="root_Select"
-                    class="play_root btn btn-primary btn-lg">Submit</button>
-            </div>
+            
         </div>
-    </form>
+
 
 </div>
 
+
+
 <div class="notesHeader" id="notesblock">
-    <form method="POST" action="}">
+
         <div class="row">
             <h1 class="text-center">Select notes for harmony</h1>
             <div class="col-11 notesSection">
@@ -50,17 +38,19 @@
                 <div class="form-check form-check-inline noteselect">
 
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ notes }}"
-                        value="{{ notes }}" name="harmSelect{{notes}}">
+                        value="{{ notes }}" name="{{ notes }}">
                     <label class="form-check-label" for="inlineCheckbox">{{ notes }}</label>
                 </div>
                 {% endfor %}
             </div>
             <div class="col-1">
-                <button type="submit" id="harmSelect"
+                <button type="submit" id="harm_Select"
                     class="play_root btn btn-primary btn-lg">Submit</button>
             </div>
         </div>
     </form>
 </div>
+
+
 
 {% endblock %}
