name, string and class method all matching up

--- a/templates/root.html
+++ b/templates/root.html
@@ -3,7 +3,7 @@
 
 <div class="notesHeader" id="rootblock">
 
-    <form method="post"  action="{{url_for('harmonykeys', key=key)}}">
+    <form method="post"  action="{{url_for('getHarmonyKeys', key=key)}}">
         <div class="row">
             <h1 class="text-center">Pick your root note </h1>
 
