--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,12 @@
     padding: 30px;
 }
 
+.titlekey {
+    min-width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 .keyDD {
     padding-top: 50px;
     border-left: 100px;
@@ -33,6 +39,10 @@
 
 .keyDisp {
     padding-top: 20px;
+}
+
+.keyIs {
+    text-align: center;
 }
 
 .notesHeader {
@@ -78,6 +88,13 @@
     padding-right: 20px;
     min-height: 100px;
     font-size: 10px;
+}
+
+.lables {
+    border-width: 3px;
+    border-style: solid;
+    border-color: black;
+    padding: 0px !important;
 }
 
 
