--- a/templates/index.html
+++ b/templates/index.html
@@ -2,31 +2,25 @@
 <html lang="en">
 
     <head>
+        {% block head %}
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1.0">
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-            crossorigin="anonymous">
-        <link rel="stylesheet"
-            href="{{url_for('static', filename='css/style.css')}}"
-            type="text/css" />
-        <title>Vocal harmony</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+        <title>{% block title %}{% endblock %}Vocal harmony</title>
+        {% endblock %}
     </head>
 
-    {% if block == True%}
 
     <body>
+
         <div class="row ">
             <div class="col-3 header titlekey">
 
                 <div class="btn-group ">
-                    <button
-                        class="btn btn-secondary btn-lg dropdown-toggle"
-                        type="button" data-bs-toggle="dropdown"
+                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Pick your key
                     </button>
@@ -36,8 +30,7 @@
 
 
 
-                            <li><a class="dropdown-item text-center"
-                                    value="{{ keys.keySig }}" name="keySig"
+                            <li><a class="dropdown-item text-center" value="{{ keys.keySig }}" name="keySig"
                                     href="{{url_for('get_key', key=keys.keySig)}}"
                                     class="brand-logo">{{ keys.keySig }}</a>
                             </li>
@@ -48,93 +41,26 @@
                 </div>
             </div>
         </div>
-    </body>
 
-    {% else %}
-
-    <body>
-        <div class="body">
-            <div class="row ">
-                <div class="col-3 header titlekey">
-
-                    <div class="btn-group keyButton">
-                        <button
-                            class="btn btn-secondary btn-lg dropdown-toggle"
-                            type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Pick your key
-                        </button>
-                        <ul class="dropdown-menu">
-                            <form method="GET">
-                                {% for keys in ks %}
+        <div id="content">{% block content %} {% endblock %}</div>
 
 
 
-                                <li><a class="dropdown-item text-center"
-                                        value="{{ keys.keySig }}"
-                                        name="keySig"
-                                        href="{{url_for('get_key', key=keys.keySig)}}"
-                                        class="brand-logo">{{ keys.keySig }}</a>
-                                </li>
-
-                                {% endfor %}
-                            </form>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-3 header">
-                    <div class="header">
-                        <table class="table">
-                            <tr>
-                                <td class="left" id="keyIs">
-                                    Your key is {{ key }}
-                                </td>
-
-                                <td class="right" id="keyIs">{% if root %}
-                                    Your root note is {{ root }}
-                                </td>{% endif %}
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="header keyIs">
-                        <p id="keyIs">The notes are </p>
-                        {{ Keynotes|join(', ') }}
-                    </div>
-                </div>
-                <div class="col-9 header">
-
-                </div>
-            </div>
-
-            {% endif %} {% block content %} {% endblock %}
-
-        </div>
-
-
-
-        </div>
     </body>
     <script src="{{ url_for('static', filename='js/script.js')}}">
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous">
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
 
 
