--- a/templates/root.html
+++ b/templates/root.html
@@ -1,5 +1,75 @@
 {% extends 'index.html' %} {% block content %}
 
+<div class="row ">
+
+    <div class="col-3 header">
+        <div class="header">
+            <table class="table">
+                <tr>
+                    <td class="left" id="keyIs">
+                        Your key is {{ key }}
+                    </td>
+
+                    <td class="right" id="keyIs">{% if root %} Your root note is {{ root }}
+                    </td>{% endif %}
+                </tr>
+            </table>
+        </div>
+        <div class="header keyIs">
+            <p id="keyIs">The notes are </p>
+            {{ Keynotes|join(', ') }}
+        </div>
+    </div>
+    <div class="col-9 header">
+        <form method="post" action=>
+
+            <div class="row">
+                <h1 class="text-center">Classic harmonies</h1>
+        
+                <h5> 2 part harmonies </h5>
+                <div class="text-center notesSection col-10">
+                    {% for a in typenames[0] %} {%if typevoice[0]%}
+                    <div class="form-check form-check-inline noteselect">
+        
+                        <input name="chordSelect" class="form-check-input" type="radio" id="inlineRootCheckbox"
+                            value="{{ typevoice[0][loop.index0]}}">
+                        <label class="form-check-label" for="inlineRootCheckbox">{{ a }} </label>
+                    </div>
+                    {% endif %} {% endfor %}
+                </div>
+                <h5> 3 part harmonies </h5>
+                <div class="text-center notesSection col-10">
+                    {% for a in typenames[1] %} {% if typevoice[1]%}
+                    <div class="form-check form-check-inline noteselect">
+        
+                        <input name="chordSelect" class="form-check-input" type="radio" id="inlineRootCheckbox"
+                            value="{{ typevoice[1][loop.index0]}}">
+                        <label class="form-check-label" for="inlineRootCheckbox">{{ a }} </label>
+                    </div>
+                    {% endif %} {% endfor %}
+                </div>
+                <h5> 4 part harmonies </h5>
+                <div class="text-center notesSection col-10">
+                    {% for a in typenames[2] %} {% if typevoice[2]%}
+                    <div class="form-check form-check-inline noteselect">
+        
+                        <input name="chordSelect" class="form-check-input" type="radio" id="inlineRootCheckbox"
+                            value="{{ typevoice[2][loop.index0]}}">
+                        <label class="form-check-label" for="inlineRootCheckbox">{{ a }} </label>
+                    </div>
+                    {% endif %} {% endfor %}
+                </div>
+        
+                <div class="col-1">
+                    <button type="submit" id="chord_Select" class="play_root btn btn-primary btn-lg">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
 
 <div class="notesHeader" id="rootblock">
     
@@ -34,14 +104,14 @@
             <div class="col-10 notesSection">
                 
                 {% for notes in Keynotes %}
-
+                {% if notes != root %}
                 <div class="form-check form-check-inline noteselect">
-
+                    
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ notes }}"
                         value="{{ notes }}" name="{{ notes }}"{% for each in harmlist %} {%if each == notes %} checked {%endif%} {% endfor %}>
                     <label class="form-check-label" for="inlineCheckbox{{ notes }}">{{ notes }}</label>
                 </div>
-                
+                {%endif%}
                 {% endfor %}
             </div>
             <div class="text-center notesSection col-10">
@@ -100,13 +170,14 @@
             <h1 class="text-center">Select notes for harmony</h1>
             <div class="col-10 notesSection">
                 {% for notes in Keynotes %}
-
+                {% if notes != root %}
                 <div class="form-check form-check-inline noteselect">
 
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ notes }}"
                         value="{{ notes }}" name="{{ notes }}" >
                     <label class="form-check-label" for="inlineCheckbox{{ notes }}">{{ notes }}</label>
                 </div>
+                {%endif%}
                 {% endfor %}
             </div>
             <div class="text-center notesSection col-10">
