--- a/templates/select_root.html
+++ b/templates/select_root.html
@@ -1,6 +1,34 @@
 {% extends 'index.html' %} {% block content %}
 
 
+<div class="row ">
+
+    <div class="col-3 header">
+        <div class="header">
+            <table class="table">
+                <tr>
+                    <td class="left" id="keyIs">
+                        Your key is {{ key }}
+                    </td>
+
+                    <td class="right" id="keyIs">{% if root %} Your root note is {{ root }}
+                    </td>{% endif %}
+                </tr>
+            </table>
+        </div>
+        <div class="header keyIs">
+            <p id="keyIs">The notes are </p>
+            {{ Keynotes|join(', ') }}
+        </div>
+    </div>
+    <div class="col-9 header">
+
+    </div>
+</div>
+
+</div>
+
+
 
 
 <div class="notesHeader" id="rootblock">
@@ -34,29 +62,5 @@
 
 </div>
 
-<!--
-<div class="notesHeader" id="notesblock">
-    <form method="POST" action="}">
-        <div class="row">
-            <h1 class="text-center">Select notes for harmony</h1>
-            <div class="col-11 notesSection">
-
-                {% for notes in Keynotes %}
-                <div class="form-check form-check-inline noteselect">
-
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox{{ notes }}"
-                        value="{{ notes }}" name="harmSelect{{notes}}">
-                    <label class="form-check-label" for="inlineCheckbox">{{ notes }}</label>
-                </div>
-                {% endfor %}
-            </div>
-            <div class="col-1">
-                <button type="submit" id="harmSelect"
-                    class="play_root btn btn-primary btn-lg">Submit</button>
-            </div>
-        </div>
-    </form>
-</div>
-
--->
 {% endblock %}
+
