--- a/templates/index.html
+++ b/templates/index.html
@@ -19,30 +19,39 @@
         <div class="row ">
             <div class="col-3 header titlekey">
 
-                <div class="btn-group ">
-                    <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Pick your key
-                    </button>
-                    <ul class="dropdown-menu">
-                        <form method="GET">
-                            {% for keys in ks %}
 
 
+                <form method="post">
+                    <label for="keySignature">Select the key signature:</label>
+                    <select name="keySignature">
+                        {% for key in ks %}
+                        <option value="{{ key }}">{{ key }}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="submit">Get Major Scale</button>
+                </form>
+                {% if selected_key %}
+                <div>
+                    <h2>Results:</h2>
+                    <p>Selected Key: {{ selected_key }}</p>
+                    <p>Major Scale: {{ major_scale | join(', ') }}</p>
+                    <p>Dorian: {{dorian | join(', ')}}</p>
+                    <p>Phrygian: {{phrygian | join(', ')}}</p>
+                    <p>Lydian: {{lydian | join(', ')}}</p>
+                    <p>Mixolydian: {{mixolydian | join(', ')}} </p>
+                    <p>Aeolian: {{aeolian | join(', ')}}</p>
+                    <p>Locrian:{{locrian | join(', ')}}
+                    </p>
 
-                            <li><a class="dropdown-item text-center" value="{{ keys.keySig }}" name="keySig"
-                                    href="{{url_for('get_key', key=keys.keySig)}}"
-                                    class="brand-logo">{{ keys.keySig }}</a>
-                            </li>
-
-                            {% endfor %}
-                        </form>
-                    </ul>
                 </div>
-            </div>
-        </div>
+                {% endif %}
 
-        <div id="content">{% block content %} {% endblock %}</div>
+
+            </div>
+
+            <div id="content">{% block content %} {% endblock %}</div>
+
+
 
 
 
@@ -50,18 +59,17 @@
     <script src="{{ url_for('static', filename='js/script.js')}}">
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous">
+        </script>
 
 
 
