--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
                 {% if selected_key %}
                 <div>
                     <h2>Results:</h2>
+                    <h2>Results:</h2>
                     <p>Selected Key: {{ selected_key }}</p>
                     <p>Major Scale: {{ major_scale | join(', ') }}</p>
                     <p>Dorian: {{dorian | join(', ')}}</p>
